--- a/index.Rmd
+++ b/index.Rmd
@@ -29,14 +29,14 @@ death_color <- "red"
 #------------------ Data ------------------
 df <- coronavirus %>% 
   # dplyr::filter(date == max(date)) %>%
-  dplyr::group_by(country, type) %>%
+  dplyr::group_by(Country.Region, type) %>%
   dplyr::summarise(total = sum(cases)) %>%
   tidyr::pivot_wider(names_from =  type, 
                      values_from = total) %>%
   dplyr::mutate(unrecovered = confirmed - ifelse(is.na(recovered), 0, recovered) - ifelse(is.na(death), 0, death)) %>%
   dplyr::arrange(-confirmed) %>%
   dplyr::ungroup() %>%
-  dplyr::mutate(country = dplyr::if_else(country == "United Arab Emirates", "UAE", country)) %>%
+  dplyr::mutate(country = dplyr::if_else(Country.Region == "United Arab Emirates", "UAE", Country.Region)) %>%
   dplyr::mutate(country = dplyr::if_else(country == "Mainland China", "China", country)) %>%
   dplyr::mutate(country = dplyr::if_else(country == "North Macedonia", "N.Macedonia", country)) %>%
   dplyr::mutate(country = trimws(country)) %>%
@@ -56,7 +56,7 @@ df_daily <- coronavirus %>%
   
 df1 <- coronavirus %>% dplyr::filter(date == max(date))
 #------------trajectory plot data prep------------
-df_china <- coronavirus %>% dplyr::filter(type == "confirmed", country == "China") %>%
+df_china <- coronavirus %>% dplyr::filter(type == "confirmed", Country.Region == "China") %>%
   dplyr::group_by(date) %>%
   dplyr::summarise(cases = sum(cases)) %>%
   dplyr::ungroup() %>%
@@ -65,7 +65,7 @@ df_china <- coronavirus %>% dplyr::filter(type == "confirmed", country == "China
   dplyr::filter(china > 100)  %>%
   dplyr::select(-cases, -date)
 df_china$index <- 1:nrow(df_china)
-df_uk <- coronavirus %>% dplyr::filter(type == "confirmed", country == "United Kingdom") %>%
+df_uk <- coronavirus %>% dplyr::filter(type == "confirmed", Country.Region == "United Kingdom") %>%
   dplyr::group_by(date) %>%
   dplyr::summarise(cases = sum(cases)) %>%
   dplyr::ungroup() %>%
@@ -74,7 +74,7 @@ df_uk <- coronavirus %>% dplyr::filter(type == "confirmed", country == "United K
   dplyr::filter(uk > 100)  %>%
   dplyr::select(-cases, -date)
 df_uk$index <- 1:nrow(df_uk)
-df_fr <- coronavirus %>% dplyr::filter(type == "confirmed", country == "France") %>%
+df_fr <- coronavirus %>% dplyr::filter(type == "confirmed", Country.Region == "France") %>%
   dplyr::group_by(date) %>%
   dplyr::summarise(cases = sum(cases)) %>%
   dplyr::ungroup() %>%
@@ -83,7 +83,7 @@ df_fr <- coronavirus %>% dplyr::filter(type == "confirmed", country == "France")
   dplyr::filter(france > 100)  %>%
   dplyr::select(-cases, -date)
 df_fr$index <- 1:nrow(df_fr)
-df_us <- coronavirus %>% dplyr::filter(type == "confirmed", country == "US") %>%
+df_us <- coronavirus %>% dplyr::filter(type == "confirmed", Country.Region == "US") %>%
   dplyr::group_by(date) %>%
   dplyr::summarise(cases = sum(cases)) %>%
   dplyr::ungroup() %>%
@@ -92,7 +92,7 @@ df_us <- coronavirus %>% dplyr::filter(type == "confirmed", country == "US") %>%
   dplyr::filter(us > 100)  %>%
   dplyr::select(-cases, -date)
 df_us$index <- 1:nrow(df_us)
-df_iran <- coronavirus %>% dplyr::filter(type == "confirmed", country == "Iran") %>%
+df_iran <- coronavirus %>% dplyr::filter(type == "confirmed", Country.Region == "Iran") %>%
   dplyr::group_by(date) %>%
   dplyr::summarise(cases = sum(cases)) %>%
   dplyr::ungroup() %>%
@@ -101,7 +101,7 @@ df_iran <- coronavirus %>% dplyr::filter(type == "confirmed", country == "Iran")
   dplyr::filter(iran > 100)  %>%
   dplyr::select(-cases, -date)
 df_iran$index <- 1:nrow(df_iran)
-df_sk <- coronavirus %>% dplyr::filter(type == "confirmed", country == "Korea, South") %>%
+df_sk <- coronavirus %>% dplyr::filter(type == "confirmed", Country.Region == "Korea, South") %>%
   dplyr::group_by(date) %>%
   dplyr::summarise(cases = sum(cases)) %>%
   dplyr::ungroup() %>%
@@ -110,7 +110,7 @@ df_sk <- coronavirus %>% dplyr::filter(type == "confirmed", country == "Korea, S
   dplyr::filter(sk > 100)  %>%
   dplyr::select(-cases, -date)
 df_sk$index <- 1:nrow(df_sk)
-df_spain <- coronavirus %>% dplyr::filter(type == "confirmed", country == "Spain") %>%
+df_spain <- coronavirus %>% dplyr::filter(type == "confirmed", Country.Region == "Spain") %>%
   dplyr::group_by(date) %>%
   dplyr::summarise(cases = sum(cases)) %>%
   dplyr::ungroup() %>%
@@ -272,13 +272,13 @@ plotly::plot_ly(data = df_daily,
     
 ```{r}
 df_summary <-coronavirus %>% 
-  # dplyr::filter(country != "Others") %>%
-  dplyr::group_by(country, type) %>%
+  # dplyr::filter(Country.Region != "Others") %>%
+  dplyr::group_by(Country.Region, type) %>%
   dplyr::summarise(total_cases = sum(cases)) %>%
   tidyr::pivot_wider(names_from = type, values_from = total_cases) %>%
   dplyr::arrange(- confirmed) %>%
   dplyr::filter(confirmed >= 25) %>%
-  dplyr::select(country = country, confirmed, recovered, death) %>%
+  dplyr::select(country = Country.Region, confirmed, recovered, death) %>%
   dplyr::mutate(recover_rate = recovered / confirmed,
          death_rate = death / confirmed)  
 df_summary %>%
@@ -299,7 +299,7 @@ Map
 # map tab added by Art Steinmetz
 cv_data_for_plot <- coronavirus %>% 
   dplyr::filter(cases > 0) %>% 
-  dplyr::group_by(country,province,lat,long,type) %>% 
+  dplyr::group_by(Country.Region,Province.State,Lat,Long,type) %>% 
   dplyr::summarise(cases = sum(cases)) %>% 
   dplyr::mutate(log_cases = 2 * log(cases)) %>% 
   dplyr::ungroup()
@@ -310,7 +310,7 @@ names(cv_data_for_plot.split) %>%
   purrr::walk( function(df) {
     map_object <<- map_object %>%
       addCircleMarkers(data=cv_data_for_plot.split[[df]],
-                 lng=~long, lat=~lat,
+                 lng=~Long, lat=~Lat,
 #                 label=~as.character(cases),
                  color = ~pal(type),
                  stroke = FALSE,
@@ -320,7 +320,7 @@ names(cv_data_for_plot.split) %>%
                  popup =  popupTable(cv_data_for_plot.split[[df]],
                                               feature.id = FALSE,
                                               row.numbers = FALSE,
-                                              zcol=c("type","cases","country","province")),
+                                              zcol=c("type","cases","Country.Region","Province.State")),
                  group = df,
 #                 clusterOptions = markerClusterOptions(removeOutsideVisibleBounds = F),
                  labelOptions = labelOptions(noHide = F,
@@ -346,10 +346,10 @@ Column {data-width=400}
 max_date <- max(coronavirus$date)
 coronavirus %>% 
   dplyr::filter(type == "confirmed", date == max_date) %>%
-  dplyr::group_by(country) %>%
+  dplyr::group_by(Country.Region) %>%
   dplyr::summarise(total_cases = sum(cases)) %>%
   dplyr::arrange(-total_cases) %>%
-  dplyr::mutate(country = factor(country, levels = country)) %>%
+  dplyr::mutate(country = factor(Country.Region, levels = Country.Region)) %>%
   dplyr::ungroup() %>%
   dplyr::top_n(n = 15, wt = total_cases) %>%
   plotly::plot_ly(x = ~ country,
@@ -411,8 +411,8 @@ Column {data-width=600}
 
 ```{r}
 coronavirus::coronavirus %>% 
-  # dplyr::filter(country != "Others") %>%
-  dplyr::group_by(country, type) %>%
+  # dplyr::filter(Country.Region != "Others") %>%
+  dplyr::group_by(Country.Region, type) %>%
   dplyr::summarise(total_cases = sum(cases)) %>%
   tidyr::pivot_wider(names_from = type, values_from = total_cases) %>%
   dplyr::arrange(- confirmed) %>%
@@ -428,10 +428,10 @@ coronavirus::coronavirus %>%
                   size = ~  log(confirmed),
                   sizes = c(5, 70),
                   type = 'scatter', mode = 'markers',
-                  color = ~ country,
+                  color = ~ Country.Region,
                   marker = list(sizemode = 'diameter' , opacity = 0.5),
                   hoverinfo = 'text',
-                  text = ~paste("</br>", country, 
+                  text = ~paste("</br>", Country.Region, 
                                 "</br> Confirmed Cases: ", confirmed,
                                 "</br> Recovery Rate: ", paste(round(100 * recover_rate, 1), "%", sep = ""),
                                 "</br> Death Rate: ",  paste(round(100 * death_rate, 1), "%", sep = ""))
@@ -449,11 +449,11 @@ coronavirus::coronavirus %>%
 ```{r}
 daily_summary <- coronavirus %>% 
   dplyr::filter(date == max(date)) %>%
-  dplyr::group_by(country, type) %>%
+  dplyr::group_by(Country.Region, type) %>%
   dplyr::summarise(total = sum(cases)) %>%
   tidyr::pivot_wider(names_from = type, values_from = total) %>%
   dplyr::arrange(-confirmed) %>%
-  dplyr::select(country = country, confirmed, recovered, death)
+  dplyr::select(country = Country.Region, confirmed, recovered, death)
   
   
   DT::datatable(data = daily_summary,
@@ -467,7 +467,7 @@ Data
 
 ```{r}
 coronavirus %>% 
-  dplyr::select(Date = date, Province = province, Country = country, `Case Type` = type, `Number of Cases` = cases) %>%
+  dplyr::select(Date = date, Province = Province.State, Country = Country.Region, `Case Type` = type, `Number of Cases` = cases) %>%
   DT::datatable(rownames = FALSE,
             options = list(searchHighlight = TRUE, 
                            pageLength = 20), filter = 'top')
@@ -511,3 +511,4 @@ For any question or feedback, you can either open an [issue](https://github.com/
 **Contribution** 
 
 The **Map** tab was contributed by [Art Steinmetz](@adababbage) on this [pull request](https://github.com/RamiKrispin/coronavirus_dashboard/pull/1). Thanks Art!
+
